fix: textarea layout shift

--- a/index.css
+++ b/index.css
@@ -55,10 +55,10 @@ form {
 
 /* Button Styles */
 button {
-  padding: 10px;
+  padding: 8px;
   border: 1px solid var(--border-color);
   border-radius: 5px;
-  min-width: fit-content;
+  width: fit-content;
   height: fit-content;
   background-color: var(--primary);
   color: var(--button-text-color);
@@ -83,7 +83,7 @@ textarea {
   color: var(--text-color);
   outline: none;
   width: 100%;
-  height: 50px;
+  height: 48px;
   max-height: 300px;
   overflow-y: auto;
   resize: none;
